SERVER-101653: Reject $rankFusion queries run on view (#33036)

GitOrigin-RevId: 2bcd1d3943f844000f83ea4a783c4bc936c92c65